--- a/package.json
+++ b/package.json
@@ -1,1 +1,64 @@
 
+{
+  "name": "nexus-axion-prototype",
+  "version": "1.0.0",
+  "description": "NEXUS AXION - Frontend Essence Absorbed in Backend Environment. Pure JavaScript architecture unifying frontend/backend logic without external simulation dependencies.",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "node app.js",
+    "test": "node -e \"console.log('NEXUS AXION Health Check'); const { server } = require('./app.js'); setTimeout(() => process.exit(0), 1000);\"",
+    "health": "node -e \"console.log('Architecture: Frontend Essence → Backend Environment'); console.log('Pure JS implementation without external dependencies'); console.log('Ready for deployment on any Node.js platform');\""
+  },
+  "keywords": [
+    "nexus-axion",
+    "frontend-backend-unified",
+    "pure-javascript",
+    "no-dependencies",
+    "reactive-state",
+    "server-components",
+    "unified-architecture"
+  ],
+  "author": "NEXUS AXION Architecture",
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/nexus-axion-prototype.git"
+  },
+  "dependencies": {},
+  "devDependencies": {},
+  "nexus": {
+    "architecture": "Frontend Essence → Backend Environment",
+    "paradigm": "Unified Logic Layer",
+    "essence_absorbed": [
+      "Reactive State Management",
+      "Component Lifecycle",
+      "Event-driven Architecture",
+      "Virtual Rendering",
+      "Declarative Templates"
+    ],
+    "primitives": [
+      "Server-Side React-like State",
+      "Server-Side Component System", 
+      "Server-Side Event Delegation",
+      "Server-Side Router",
+      "Unified Rendering Engine"
+    ],
+    "deployment_compatibility": {
+      "frontend_only": "Limited functionality",
+      "backend_only": "Full performance",
+      "full_stack": "Maximum capabilities"
+    },
+    "philosophy": "Assimilation over Simulation - Pure implementation without external dependencies"
+  },
+  "render": {
+    "buildCommand": "echo 'No build needed - Pure JavaScript'",
+    "startCommand": "node app.js",
+    "envVars": {
+      "PORT": "RENDER_EXTERNAL_URL requires PORT"
+    }
+  }
+}
